// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicForm Snapshot Tests should match snapshot when fully loaded 1`] = `
<div
  data-testid="grid"
>
  <div
    data-testid="column"
  >
    <div
      data-testid="location-dropdown"
    >
      <div>
        Location
      </div>
      <select
        aria-invalid="false"
        aria-label="Location"
        disabled=""
      >
        <option
          value="selected"
        >
          Location 1
        </option>
        <option
          value="123"
        >
          Location 1
        </option>
      </select>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="encounter-type-dropdown"
    >
      <div>
        Encounter Type
      </div>
      <select
        aria-invalid="false"
        aria-label="Encounter Type"
        disabled=""
      >
        <option
          value="selected"
        >
          Consultation
        </option>
        <option
          value="789"
        >
          Consultation
        </option>
        <option
          value="012"
        >
          Encounter Type 2
        </option>
      </select>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="visit-type-dropdown"
    >
      <div>
        Visit Type
      </div>
      <select
        aria-invalid="false"
        aria-label="Visit Type"
        disabled=""
      >
        <option
          value="selected"
        >
          Visit Type 1
        </option>
        <option
          value="345"
        >
          Visit Type 1
        </option>
        <option
          value="678"
        >
          Visit Type 2
        </option>
      </select>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="practitioner-dropdown"
    >
      <div>
        Participant(s)
      </div>
      <select
        aria-invalid="false"
        aria-label="Participant(s)"
        disabled=""
      >
        <option
          value="selected"
        >
          Dr. John Smith
        </option>
        <option
          value="provider-uuid-123"
        >
          Dr. John Smith
        </option>
      </select>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="date-picker"
    >
      <input
        aria-label="Encounter Date"
        data-testid="date-picker-input"
        disabled=""
        id="encounter-date-picker-input"
        placeholder="16/05/2025"
      />
    </div>
  </div>
</div>
`;

exports[`BasicForm Snapshot Tests should match snapshot when loading 1`] = `
<div
  data-testid="grid"
>
  <div
    data-testid="column"
  >
    <div
      data-testid="skeleton-placeholder"
    />
    <div
      data-testid="skeleton-placeholder"
    />
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="skeleton-placeholder"
    />
    <div
      data-testid="skeleton-placeholder"
    />
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="skeleton-placeholder"
    />
    <div
      data-testid="skeleton-placeholder"
    />
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="skeleton-placeholder"
    />
    <div
      data-testid="skeleton-placeholder"
    />
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="skeleton-placeholder"
    />
    <div
      data-testid="skeleton-placeholder"
    />
  </div>
</div>
`;

exports[`BasicForm Snapshot Tests should match snapshot with error states 1`] = `
<div
  data-testid="grid"
>
  <div
    data-testid="column"
  >
    <div
      data-testid="location-dropdown"
    >
      <div>
        Location
      </div>
      <select
        aria-errormessage="location-dropdown-error"
        aria-invalid="true"
        aria-label="Location"
        disabled=""
      >
        <option
          value="selected"
        >
          Location 1
        </option>
        <option
          value="123"
        >
          Location 1
        </option>
      </select>
      <div
        id="location-dropdown-error"
        role="alert"
      >
        Location error
      </div>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="encounter-type-dropdown"
    >
      <div>
        Encounter Type
      </div>
      <select
        aria-errormessage="encounter-type-dropdown-error"
        aria-invalid="true"
        aria-label="Encounter Type"
        disabled=""
      >
        <option
          value="selected"
        >
          Consultation
        </option>
        <option
          value="789"
        >
          Consultation
        </option>
        <option
          value="012"
        >
          Encounter Type 2
        </option>
      </select>
      <div
        id="encounter-type-dropdown-error"
        role="alert"
      >
        Encounter error
      </div>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="visit-type-dropdown"
    >
      <div>
        Visit Type
      </div>
      <select
        aria-errormessage="visit-type-dropdown-error"
        aria-invalid="true"
        aria-label="Visit Type"
        disabled=""
      >
        <option
          value="selected"
        >
          Visit Type 1
        </option>
        <option
          value="345"
        >
          Visit Type 1
        </option>
        <option
          value="678"
        >
          Visit Type 2
        </option>
      </select>
      <div
        id="visit-type-dropdown-error"
        role="alert"
      >
        Encounter error
      </div>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="practitioner-dropdown"
    >
      <div>
        Participant(s)
      </div>
      <select
        aria-errormessage="practitioner-dropdown-error"
        aria-invalid="true"
        aria-label="Participant(s)"
        disabled=""
      >
        <option
          value="selected"
        >
          Dr. John Smith
        </option>
        <option
          value="provider-uuid-123"
        >
          Dr. John Smith
        </option>
      </select>
      <div
        id="practitioner-dropdown-error"
        role="alert"
      >
        Practitioner error
      </div>
    </div>
  </div>
  <div
    data-testid="column"
  >
    <div
      data-testid="date-picker"
    >
      <input
        aria-label="Encounter Date"
        data-testid="date-picker-input"
        disabled=""
        id="encounter-date-picker-input"
        placeholder="16/05/2025"
      />
    </div>
  </div>
</div>
`;
